Update restart button id

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Navigation Buttons -->
     <div id="navigation-buttons">
-        <button id="restart-button">Restart</button>
+        <button id="top-restart-button">Restart</button>
         <button id="end-button">End</button>
         <button id="info-button">(i)</button>
     </div>
