Add and modified Play again function that was missing

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div id="end-screen" style="display: none;">
         <h1>Game Over</h1>
         <p id="final-score"></p>
-        <button id="restart-button">Play Again</button>
+        <button id="play-again-button">Play Again</button>
     </div>
 
     <!-- Navigation Buttons -->
     <div id="navigation-buttons">
-        <button id="top-restart-button">Restart</button>
+        <button id="restart-button">Restart</button>
         <button id="end-button">End</button>
         <button id="info-button">(i)</button>
     </div>
