Add swat audio and html element

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         Your browser does not support the audio element.
     </audio>
 
+    <audio id="swat-sound">
+        <source src="assets/audio/swat-sound.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <div id="start-screen">
         <h1>Swat the Fly Game</h1>
         <label for="time-select">Select Countdown Time (seconds):</label>
