Add bee image and modify

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <div id="game-container" style="display: none;">
         <div id="fly"></div>
+        <div id="bee" style="display: none;"></div> <!-- Bee element, hidden initially -->
         <div id="score-board">Score: 0</div>
         <div id="timer">Time: 30s</div>
     </div>
