Modify game info message

--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
         <div class="popup-content">
             <span id="close-popup">&times;</span>
             <h2>How to Play Swat the Fly</h2>
-            <p>Swat as many flies as you can before the time runs out! Click or tap on the fly to score points.
-                Customize the game duration before you start.</p>
+            <p>In Swat the Fly, your goal is to swat as many flies as possible before the time runs out. Each fly you
+                swat adds 1 point to your score.</p>
+            <p>But be careful! Occasionally, a bee will appear instead of a fly. If you accidentally swat the bee,
+                you'll lose 2 points. Pay close attention and swat wisely!</p>
+            <p>You can customize the game duration before you start. The game ends when the timer runs out, and your
+                final score will be displayed.</p>
+            <p>Good luck, and have fun swatting!</p>
         </div>
     </div>
 
