Modify game info text and styling

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <span id="close-popup">&times;</span>
             <h2>How to Play Swat the Fly</h2>
             <p>In Swat the Fly, your goal is to swat as many flies as possible before the time runs out. Each fly you
-                swat adds 1 point to your score.</p>
+                swat adds 1 point to your score.</p><br>
             <p>But be careful! Occasionally, a bee will appear instead of a fly. If you accidentally swat the bee,
-                you'll lose 2 points. Pay close attention and swat wisely!</p>
+                you'll lose 2 points. Pay close attention and swat wisely!</p><br>
             <p>You can customize the game duration before you start. The game ends when the timer runs out, and your
-                final score will be displayed.</p>
+                final score will be displayed.</p><br>
             <p>Good luck, and have fun swatting!</p>
         </div>
     </div>
